--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -12,7 +12,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_4">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_5">
 </head>
 <body>
     <div id="app">
@@ -82,6 +82,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <p id="card-front-text"></p>
+                            <p id="card-front-example" class="card-example" style="display:none"></p>
                         </div>
                         <div class="card-back">
                             <p id="card-back-text"></p>
@@ -90,7 +91,7 @@
                 </div>
             </div>
             
-            <div id="card-example-below" class="example" style="display:none;"></div>
+            <!-- div id="card-example-below" class="example" style="display:none;"></div -->
             
             <div class="card-navigation">
                 <!-- Check JS for id references; minimalist icons -->
@@ -189,6 +190,6 @@
         </div>
 
     </div>
-    <script src="/static/js/flashcards.js?v=20260203_4"></script>
+    <script src="/static/js/flashcards.js?v=20260203_5"></script>
 </body>
 </html>
