--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -12,7 +12,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_5">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_7">
 </head>
 <body>
     <div id="app">
@@ -93,20 +93,22 @@
             
             <!-- div id="card-example-below" class="example" style="display:none;"></div -->
             
-            <div class="card-navigation">
-                <!-- Check JS for id references; minimalist icons -->
-                <button id="prev-card" class="btn-nav-icon" disabled>
-                    <i class="ph ph-caret-left"></i>
-                    <span id="prev-text" style="display:none"></span> <!-- Hidden for JS compatibility -->
-                </button>
-                <button id="next-card" class="btn-nav-icon">
-                    <i class="ph ph-caret-right"></i>
-                    <span id="next-text" style="display:none"></span> <!-- Hidden for JS compatibility -->
-                </button>
+            <div class="study-footer">
+                <div class="card-navigation">
+                    <!-- Check JS for id references; minimalist icons -->
+                    <button id="prev-card" class="btn-nav-icon" disabled>
+                        <i class="ph ph-caret-left"></i>
+                        <span id="prev-text" style="display:none"></span> <!-- Hidden for JS compatibility -->
+                    </button>
+                    <button id="next-card" class="btn-nav-icon">
+                        <i class="ph ph-caret-right"></i>
+                        <span id="next-text" style="display:none"></span> <!-- Hidden for JS compatibility -->
+                    </button>
+                </div>
+                
+                <!-- New exit button -->
+                <button id="exit-study-mode" class="btn-full-width"><i class="ph ph-arrow-u-up-left"></i> Вернуться к набору</button>
             </div>
-            
-            <!-- New exit button -->
-            <button id="exit-study-mode" class="btn-full-width"><i class="ph ph-arrow-u-up-left"></i> Вернуться к набору</button>
         </div>
 
         <!-- Create set modal -->
