--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -12,7 +12,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_12">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260203_13">
 </head>
 <body>
     <div id="app">
@@ -67,25 +67,34 @@
 
         <!-- Study screen -->
         <div id="study-screen" class="screen">
-            <div class="header">
-                <!-- Use back-to-set button as a fallback, but primary exit is the bottom button -->
-                <button id="back-to-set" class="btn-back" style="opacity: 0; pointer-events: none;"><i class="ph ph-arrow-left"></i></button>
-                <div class="progress-info">
-                    <span id="card-counter">1/10</span>
+            <div class="header study-header">
+                <div class="header-left">
+                    <button id="back-to-set" class="btn-back" style="opacity: 0; pointer-events: none;"><i class="ph ph-arrow-left"></i></button>
                 </div>
-                <button id="shuffle-cards" class="btn-icon-only" type="button" title="Shuffle"><i class="ph ph-shuffle"></i></button>
-                <button id="toggle-reverse" class="btn-icon-only" type="button" title="Reverse"><i class="ph ph-arrows-left-right"></i></button>
+                <div class="header-center">
+                    <div class="progress-badge">
+                        <span id="card-counter">1/10</span>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <button id="shuffle-cards" class="btn-icon-only" type="button" title="Shuffle"><i class="ph ph-shuffle"></i></button>
+                    <button id="toggle-reverse" class="btn-icon-only" type="button" title="Reverse"><i class="ph ph-arrows-left-right"></i></button>
+                </div>
             </div>
             
             <div class="card-container">
+                <!-- Card Stack Effect -->
+                <div class="card-stack-bg card-stack-2"></div>
+                <div class="card-stack-bg card-stack-1"></div>
+                
                 <div id="flashcard" class="flashcard">
                     <div class="card-inner">
                         <div class="card-front">
                             <p id="card-front-text"></p>
-                            <p id="card-front-example" class="card-example" style="display:none"></p>
                         </div>
                         <div class="card-back">
                             <p id="card-back-text"></p>
+                            <p id="card-back-example" class="card-example" style="display:none"></p>
                         </div>
                     </div>
                 </div>
@@ -192,6 +201,6 @@
         </div>
 
     </div>
-    <script src="/static/js/flashcards.js?v=20260203_5"></script>
+    <script src="/static/js/flashcards.js?v=20260203_13"></script>
 </body>
 </html>
