--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -104,14 +104,15 @@
                 <button id="prev-card" class="btn-nav-floating btn-nav-left" disabled>
                     <i class="ph ph-caret-left"></i>
                 </button>
+                <button id="exit-study-mode" class="btn-nav-floating btn-nav-center">
+                    <i class="ph ph-x"></i>
+                </button>
                 <button id="next-card" class="btn-nav-floating btn-nav-right">
                     <i class="ph ph-caret-right"></i>
                 </button>
             </div>
             
-            <div class="study-footer">
-                <button id="exit-study-mode" class="btn-full-width"><i class="ph ph-arrow-u-up-left"></i> Вернуться к набору</button>
-            </div>
+            <!-- Footer removed -->
         </div>
 
         <!-- Create set modal -->
