--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -12,7 +12,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260205_05">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20260205_06">
 </head>
 <body>
     <div id="app">
@@ -82,8 +82,9 @@
                     <div id="timer-setup" class="timer-setup" style="display:none;">
                         <div class="timer-setup-inner">
                             <label class="timer-label"><i class="ph ph-clock-countdown"></i> мин</label>
-                            <input type="range" id="timer-range" class="timer-range" min="1" max="60" value="5">
+                            <button id="timer-minus" class="timer-step-btn" type="button" aria-label="Минус 5 минут">−</button>
                             <span id="timer-range-value" class="timer-range-value">5</span>
+                            <button id="timer-plus" class="timer-step-btn" type="button" aria-label="Плюс 5 минут">+</button>
                             <button id="timer-start-btn" class="timer-start-btn"><i class="ph ph-play"></i></button>
                             <button id="timer-close-btn" class="timer-close-btn"><i class="ph ph-x"></i></button>
                         </div>
@@ -213,6 +214,6 @@
         </div>
 
     </div>
-    <script src="/static/js/flashcards.js?v=20260205_01"></script>
+    <script src="/static/js/flashcards.js?v=20260205_02"></script>
 </body>
 </html>
